--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,12 @@
 
     <properties>
 				
-	<jersey.version>1.9.1</jersey.version>
+        <jersey.version>1.9.1</jersey.version>
         <plugin.shade.version>1.4</plugin.shade.version>
         <slf4j.version>1.7.21</slf4j.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- the following is needed for the PMD plugin, it ignores it own config 
-			values -->
+        <!-- the following is needed for the PMD plugin, it ignores it own config
+        values -->
         <targetJdk>1.8</targetJdk>
     </properties>
     <profiles>
@@ -89,25 +89,6 @@
 
     <build>
         <plugins>
-<!--            <plugin>
-				 http://mojo.codehaus.org/buildnumber-maven-plugin/usage.html 
-				 1.0-beta-4 isn't working 
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>buildnumber-maven-plugin</artifactId>
-                <version>1.0-beta-3</version>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>create</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <doCheck>false</doCheck>
-                    <doUpdate>true</doUpdate>
-                </configuration>
-            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -118,9 +99,6 @@
                         <manifest>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                         </manifest>
-<!--                        <manifestEntries>
-                            <Implementation-Build>${buildNumber}</Implementation-Build>
-                        </manifestEntries>-->
                     </archive>
                     <includes>
                         <include>src/main/java</include>
@@ -169,19 +147,6 @@
                     <mainClass>de.sybig.oba.server.RestServer</mainClass>
                 </configuration>			
             </plugin>
-
-			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>cobertura-maven-plugin</artifactId> 
-				<version>2.4</version> <configuration> <instrumentation> <ignores> <ignore>com.example.boringcode.*</ignore> 
-				</ignores> <excludes> <exclude>de/sybig/oba/**/*Test.class</exclude> </excludes> 
-				</instrumentation> <check> <branchRate>0</branchRate> <lineRate>0</lineRate> 
-				<haltOnFailure>false</haltOnFailure> <totalBranchRate>0</totalBranchRate> 
-				<totalLineRate>0</totalLineRate> <packageLineRate>0</packageLineRate> <packageBranchRate>0</packageBranchRate> 
-				<regexes> <regex> <pattern>com.example.reallyimportant.*</pattern> <branchRate>90</branchRate> 
-				<lineRate>80</lineRate> </regex> <regex> <pattern>com.example.boringcode.*</pattern> 
-				<branchRate>40</branchRate> <lineRate>30</lineRate> </regex> </regexes> </check> 
-				<formats> <format>html</format> <format>xml</format> </formats> </configuration> 
-				<executions> <execution> <goals> <goal>clean</goal> <goal>check</goal> </goals> 
-				</execution> </executions> </plugin> -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
@@ -190,12 +155,30 @@
                 </configuration>
             </plugin>
 
-			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <version>2.2.1</version> 
-				<configuration> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
-				</descriptorRefs> </configuration> <executions> <execution> <id>make-assembly</id> 
-				<phase>package</phase> <goals> <goal>single</goal> </goals> </execution> 
-				</executions> </plugin> -->
-
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.5.5.201112152213</version>
+                <configuration>
+                    <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
+                    <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>jacoco-initialize</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-site</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
         <finalName>${project.artifactId}-${project.version}-r${buildNumber}</finalName>
     </build>
