--- a/oba-common/pom.xml
+++ b/oba-common/pom.xml
@@ -1,49 +1,58 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<parent>
-		<groupId>de.sybig</groupId>
-		<artifactId>oba</artifactId>
-		<version>1.4-SNAPSHOT</version>
-	</parent>
+    <parent>
+        <groupId>de.sybig</groupId>
+        <artifactId>oba</artifactId>
+        <version>1.4-SNAPSHOT</version>
+    </parent>
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>de.sybig</groupId>
-	<artifactId>oba-common</artifactId>
-	<version>1.4-SNAPSHOT</version>
-	<packaging>jar</packaging>
+    <groupId>de.sybig</groupId>
+    <artifactId>oba-common</artifactId>
+    <version>1.4-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-	<name>oba common</name>
-	<url>http://maven.apache.org</url>
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2-beta-5</version>
-				<inherited>false</inherited>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
-				<executions>
-					<execution>
-						<inherited>false</inherited>
-						<id>maven-assembly-plugin</id>
-						<phase>none</phase>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	<dependencies>
-  <dependency>
+    <name>oba common</name>
+    <url>http://maven.apache.org</url>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2-beta-5</version>
+                <inherited>false</inherited>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+                <executions>
+                    <execution>
+                        <inherited>false</inherited>
+                        <id>maven-assembly-plugin</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.0</version>
         </dependency>
         <dependency>
-  <groupId>org.codehaus.jackson</groupId>
-  <artifactId>jackson-core-asl</artifactId>
-  <version>1.9.0</version>
-</dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.9.0</version>
+        </dependency>
 
-</dependencies>
+    </dependencies>
 </project>
