--- a/oba-client/pom.xml
+++ b/oba-client/pom.xml
@@ -71,7 +71,7 @@
                     </includes>
                 </configuration>
             </plugin>
-             <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>${plugin.shade.version}</version>
@@ -110,7 +110,7 @@
             <artifactId>oba-common</artifactId>
             <version>1.4-SNAPSHOT</version>
         </dependency>
-        <dependency>
+        <!--        <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-json</artifactId>
             <version>${jersey.version}</version>
@@ -120,8 +120,15 @@
             <artifactId>jersey-client</artifactId>
             <version>${jersey.version}</version>
         </dependency>
+        -->
         <dependency>
-			<!-- REST annotations (Produces, Consumes...) after version 1.? -->
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>2.24</version>
+        </dependency>
+
+        <!-- REST annotations (Produces, Consumes...) after version 1.? -->
+        <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>jsr311-api</artifactId>
             <version>1.1.1</version>
@@ -148,8 +155,8 @@
 
         </dependency>
 
-		<!-- <dependency> <groupId>edu.stanford.smi.protegex</groupId> <artifactId>protege-owl</artifactId> 
-			<version>3.4.1</version> </dependency> <dependency> <groupId>edu.stanford.smi.protegex</groupId> 
-			<artifactId>protege</artifactId> <version>3.4.1</version> </dependency> -->
+        <!-- <dependency> <groupId>edu.stanford.smi.protegex</groupId> <artifactId>protege-owl</artifactId>
+        <version>3.4.1</version> </dependency> <dependency> <groupId>edu.stanford.smi.protegex</groupId>
+        <artifactId>protege</artifactId> <version>3.4.1</version> </dependency> -->
     </dependencies>
 </project>
