--- a/oba-information-content/pom.xml
+++ b/oba-information-content/pom.xml
@@ -16,10 +16,10 @@
     <name>oba-information-content</name>
     <build>
         <plugins>
-			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <version>2.2-beta-5</version> 
-				<configuration> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
-				</descriptorRefs> <archive> <manifest> <mainClass>de.sybig.oba.client.SimpleClient</mainClass> 
-				</manifest> </archive> </configuration> </plugin> -->
+            <!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <version>2.2-beta-5</version> 
+            <configuration> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
+            </descriptorRefs> <archive> <manifest> <mainClass>de.sybig.oba.client.SimpleClient</mainClass> 
+            </manifest> </archive> </configuration> </plugin> -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -88,6 +88,11 @@
             <artifactId>oba-server</artifactId>
             <version>1.4-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.opencompare</groupId>
+            <artifactId>hac</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 </project>
